GNOME Bugzilla – Bug 773512
rtph263pay: Fix leak for B-fragments
Last modified: 2016-11-04 17:39:44 UTC
Altough commits 6a16be7, 64f9d08 and 0c7e3a8 fixed some issues they introduced others. This patch fixes the leak of one macroblock for every B fragment. Macroblock structures must not be freed immediately after finding the boundaries as they are stored and used later. However the inital dummy structure (used for finding the first boundary) must be freed. CID #1212156
Created attachment 338478 [details] [review] rtph263pay: Fix leak for B-fragments
Attachment 338478 [details] pushed as bcff182 - rtph263pay: Fix leak for B-fragments